# screen-viewer

./: pyproject.toml
screen_viewer/: manage.py
screen_viewer/screen_viewer/: asgi.py  settings.py  urls.py  wsgi.py
screen_viewer/services/: copy_past.py  load_screenshots.py  otp_handler.py
screen_viewer/users/: auth.py  forms.py  models.py  urls.py  views.py
screen_viewer/users/migrations/: 0001_initial.py  0002_rename_userprofile_profile.py  0003_profile_otp_key.py
screen_viewer/users/static/css/: jquery.jqtimeline.css  main.css
screen_viewer/users/static/js/: jquery.jqtimeline.js
screen_viewer/users/templates/: signin.html  signout.html  user.html  user_delete.html  user_edit.html  users.html  verify.html
screen_viewer/viewer/: forms.py  models.py  urls.py  views.py
screen_viewer/viewer/migrations/: 0001_initial.py  0002_alter_location_full_name_alter_location_short_name_and_more.py  0003_remove_screenshot_name_alter_screenshot_path.py  0004_remove_screenshot_folder_idx_and_more.py  0005_screenshot_name.py  0006_remove_screenshot_name_screenshot_img_created_at_and_more.py
screen_viewer/viewer/static/css/: jquery.jqtimeline.css  jquery.timeline.blue.css  main.css
screen_viewer/viewer/static/js/: datepicker.js  jquery.jqtimeline.js
screen_viewer/viewer/templates/: base.html  location.html  location_delete.html  location_edit.html  locations.html  viewer.html
